--- a/src/pages/appointment-memos.css
+++ b/src/pages/appointment-memos.css
@@ -50,6 +50,7 @@
     opacity: 0;
     transform: translateX(-10px);
   }
+
   to {
     opacity: 1;
     transform: translateX(0);
@@ -400,7 +401,8 @@
 
   .memo-textarea {
     min-height: 100px;
-    font-size: 16px; /* Prevents zoom on iOS */
+    font-size: 16px;
+    /* Prevents zoom on iOS */
   }
 
   .memo-card {
